name:                haa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/entze/haa#readme
license:             AGPLv3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           2020 Lukas Grassauer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AxisAndAlliesLibrary
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haa
